methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:98: error: method growJardiniere overrides nothing
override def growJardiniere() {
             ^